# nacc

./: .gitignore
bcc/: CMakeLists.txt  IR.c  IR.h  README.md  SetOfItemTest.c  SetOfItemTest.h  amd64.c  amd64.h  asm.c  asm.h  asm_ast.c  asm_ast.h  ast.c  ast.h  ast2amd64.c  ast2amd64.h  ast2ir.c  ast2ir.h  c_ast.c  c_ast.h  compiler.c  compiler.h  defineify.awk  ir2amd64.h  lexer.c  lexer.h  main.c  parser.c  parser.h  print_ir.c  print_ir.h  startup.c  startup.h  tokens.h  utils.c  utils.h
bcc/amd64/: amd64.c  amd64.h  emit_amd64.c  emit_amd64.h  ir2amd64.c  ir2amd64.h
bcc/inc/: constant.h  list_of.def  list_of.h  set_of.def  set_of.h  set_of_item.h  utils.h
bcc/ir/: ast2ir.c  ast2ir.h  ir.c  ir.h  print_ir.c  print_ir.h
bcc/lexer/: lexer.c  lexer.h  tokens.h
bcc/parser/: ast.c  ast.h  ast2ir.c  ast2ir.h  idtable.c  idtable.h  parser.c  parser.h  print_ast.c  print_ast.h  semantics.c  semantics.h  symtab.c  symtab.h  symtable.c  symtable.h
bcc/utils/: constant.c  list_of_item.h  list_of_item.tmpl  set_of_item.h  set_of_item.tmpl  startup.c  startup.h  utils.c  utils.h
exercise/: return_2  return_2.s
exercise/gcc/: return_2  return_2.c  return_2.s
